--- a/test.html
+++ b/test.html
@@ -50,15 +50,40 @@
       padding: 0.5rem;
       font-size: 1rem;
     }
-    @media (max-width: 500px) {
-      .section { font-size: 0.95rem; }
-      .details button, .back-button { font-size: 0.95rem; padding: 0.4rem; }
+    #map, #grid, #delivered, #thanks { display: none; text-align: center; }
+    #map { height: 300px; background: linear-gradient(#e0f7fa, #b2ebf2); position: relative; }
+    #courier { width: 20px; height: 20px; border-radius: 50%; background: red; position: absolute; top: 10px; left: 10px; transition: all 10s linear; }
+    #grid table { width: 100%; max-width: 300px; margin: 1rem auto; border-collapse: collapse; }
+    #grid td {
+      width: 25%; height: 50px;
+      border: 1px solid #000;
+      text-align: center;
+      vertical-align: middle;
+      background: #fff;
     }
+    #grid .highlight { background: red; color: white; }
+    button.confirm { margin-top: 1rem; font-size: 1rem; padding: 0.5rem 1rem; }
   </style>
 </head>
 <body>
   <h1>外送系統</h1>
   <div id="menu" class="menu"></div>
+  <div id="map">
+    <div id="courier"></div>
+    <p>外送員正在前往您所在位置...</p>
+  </div>
+  <div id="delivered">
+    <p>您的餐點已送達！</p>
+    <button class="confirm" onclick="confirmDelivery()">確認收餐</button>
+  </div>
+  <div id="grid">
+    <table id="gridTable"></table>
+    <p id="pickupText">請查收您的餐點，取餐位置為：</p>
+  </div>
+  <div id="thanks">
+    <p>謝謝您的購買！</p>
+    <button class="confirm" onclick="goBackHome()">回首頁</button>
+  </div>
 
   <script>
     const menuData = {
@@ -67,9 +92,9 @@
       左旋電波: { motor: 'motor3', options: ['冰', '熱'] },
       粒子豆腐: { motor: 'motor4', options: ['附湯', '不附湯'] }
     };
-
-    const lockStatus = {}; // 記錄每個 motor 是否鎖定
+    const lockStatus = {};
     const menuDiv = document.getElementById('menu');
+    let selectedMotor = '';
 
     async function syncLockStatus() {
       try {
@@ -81,7 +106,6 @@
         console.error('同步狀態失敗', e);
       }
     }
-
     setInterval(syncLockStatus, 1000);
 
     Object.entries(menuData).forEach(([label, data]) => {
@@ -91,7 +115,7 @@
       section.innerHTML = `<div class="label">${label}</div>
         <div class="details">
           <div class="item-buttons">
-            ${data.options.map(i => `<button class="order-btn" data-motor="${data.motor}" onclick="sendOrder('${data.motor}')">${i}</button>`).join('')}
+            ${data.options.map(i => `<button class="order-btn" data-motor="${data.motor}" onclick="prepareDelivery('${data.motor}')">${i}</button>`).join('')}
           </div>
           <div class="locked-message" style="display:none;">該選項已售罄，請稍後補貨</div>
           <button class="back-button" onclick="goBack()">返回上一頁</button>
@@ -102,24 +126,61 @@
         document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
         section.classList.add('active');
       });
-
       menuDiv.appendChild(section);
     });
 
-    async function sendOrder(motorKey) {
-  if (lockStatus[motorKey]) return;
+    function prepareDelivery(motorKey) {
+      if (lockStatus[motorKey]) return;
+      selectedMotor = motorKey;
+      lockStatus[motorKey] = true;
+      updateLockUI();
+      goBack();
 
-  lockStatus[motorKey] = true;
-  updateLockUI();         // ✅ 馬上更新畫面
-  goBack();               // ✅ 自動跳回主頁面
+      document.getElementById('menu').style.display = 'none';
+      document.getElementById('map').style.display = 'block';
+      const courier = document.getElementById('courier');
+      courier.style.left = '80%';
+      courier.style.top = '80%';
 
-  await fetch('https://cwywwww.onrender.com/send', {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ data: motorKey })
-  });
-}
+      setTimeout(() => {
+        document.getElementById('map').style.display = 'none';
+        document.getElementById('delivered').style.display = 'block';
+      }, 10000);
+    }
 
+    async function confirmDelivery() {
+      document.getElementById('delivered').style.display = 'none';
+      showGrid(selectedMotor);
+      await fetch('https://cwywwww.onrender.com/send', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ data: selectedMotor })
+      });
+    }
+
+    function showGrid(motorKey) {
+      const table = document.getElementById('gridTable');
+      table.innerHTML = '';
+      const pos = parseInt(motorKey.replace('motor', ''));
+      const row = Math.floor((pos - 1) / 4) + 1;
+      const col = ((pos - 1) % 4) + 1;
+      for (let r = 1; r <= 4; r++) {
+        const tr = document.createElement('tr');
+        for (let c = 1; c <= 4; c++) {
+          const td = document.createElement('td');
+          if (r === row && c === col) td.className = 'highlight';
+          td.textContent = `${r}-${c}`;
+          tr.appendChild(td);
+        }
+        table.appendChild(tr);
+      }
+      document.getElementById('pickupText').textContent = `請查收您的餐點，取餐位置為：${row}-${col}`;
+      document.getElementById('grid').style.display = 'block';
+      setTimeout(() => {
+        document.getElementById('grid').style.display = 'none';
+        document.getElementById('thanks').style.display = 'block';
+      }, 7000);
+    }
 
     function updateLockUI() {
       document.querySelectorAll('.section').forEach(section => {
@@ -146,6 +207,11 @@
 
     function goBack() {
       document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
+    }
+
+    function goBackHome() {
+      document.getElementById('thanks').style.display = 'none';
+      document.getElementById('menu').style.display = 'block';
     }
   </script>
 </body>
