--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>偽外送平台</title>
   <style>
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 1rem;
-      background: #fefefe;
-    }
-    h1 {
-      font-size: 1.5rem;
-      text-align: center;
-      margin-bottom: 1rem;
-    }
-    .menu {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      max-width: 600px;
-      margin: 0 auto;
-    }
+    body { font-family: sans-serif; margin: 0; padding: 1rem; background: #fefefe; }
+    h1 { font-size: 1.5rem; text-align: center; margin-bottom: 1rem; }
+    .menu { display: flex; flex-direction: column; gap: 1rem; max-width: 600px; margin: 0 auto; }
     .section {
       padding: 1rem;
       border: 1px solid #ccc;
@@ -33,6 +18,10 @@
     .section.locked {
       background: #f0f0f0;
       color: #999;
+    }
+    .section .label {
+      font-weight: bold;
+      font-size: 1.1rem;
     }
     .section.locked .label::after {
       content: "（已售罄，請稍待補貨）";
@@ -45,9 +34,7 @@
       margin-top: 1rem;
       flex-direction: column;
     }
-    .active .details {
-      display: flex;
-    }
+    .active .details { display: flex; }
     .details button {
       margin-top: 0.5rem;
       padding: 0.5rem;
@@ -63,98 +50,220 @@
       padding: 0.5rem;
       font-size: 1rem;
     }
+    #map, #grid, #delivered, #thanks { display: none; text-align: center; }
+    #map {
+      height: 300px;
+      background: linear-gradient(#e0f7fa, #b2ebf2);
+      position: relative;
+      overflow: hidden;
+    }
+    #courier {
+      width: 20px; height: 20px; border-radius: 50%; background: red;
+      position: absolute; top: 10px; left: 10px; transition: all 10s linear;
+    }
+    #user {
+      width: 20px; height: 20px; border-radius: 50%; background: blue;
+      position: absolute; top: 150px; left: 150px;
+    }
     #arrow {
-      width: 30px;
-      height: 30px;
-      border: 10px solid transparent;
-      border-top: 20px solid blue;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) rotate(0deg);
-      z-index: 10;
+      width: 0; height: 0; border-left: 10px solid transparent;
+      border-right: 10px solid transparent; border-bottom: 20px solid black;
+      position: absolute; top: 140px; left: 155px;
+      transform-origin: center bottom;
+      transition: transform 0.1s linear;
     }
-    @media (max-width: 500px) {
-      .section {
-        font-size: 0.95rem;
-      }
-      .details button,
-      .back-button {
-        font-size: 0.95rem;
-        padding: 0.4rem;
-      }
+    #grid table { width: 100%; max-width: 300px; margin: 1rem auto; border-collapse: collapse; }
+    #grid td {
+      width: 25%; height: 50px;
+      border: 1px solid #000;
+      text-align: center;
+      vertical-align: middle;
+      background: #fff;
     }
+    #grid .highlight { background: red; color: white; }
+    button.confirm { margin-top: 1rem; font-size: 1rem; padding: 0.5rem 1rem; }
   </style>
 </head>
 <body>
   <h1>外送系統</h1>
   <div id="menu" class="menu"></div>
-  <div id="arrow"></div>
+
+  <div id="map">
+    <div id="courier"></div>
+    <div id="user"></div>
+    <div id="arrow"></div>
+    <p>外送員正在前往您所在位置...</p>
+  </div>
+
+  <div id="delivered">
+    <p>您的餐點已送達！</p>
+    <button class="confirm" onclick="confirmDelivery()">確認收餐</button>
+  </div>
+  <div id="grid">
+    <table id="gridTable"></table>
+    <p id="pickupText">請查收您的餐點，取餐位置為：</p>
+  </div>
+  <div id="thanks">
+    <p>謝謝您的購買！</p>
+    <button class="confirm" onclick="goBackHome()">回首頁</button>
+  </div>
 
   <script>
+    // 定位與方向偵測
+    function startGeoTracking() {
+      navigator.geolocation.watchPosition(pos => {
+        const user = document.getElementById('user');
+        const arrow = document.getElementById('arrow');
+        const lat = pos.coords.latitude;
+        const lng = pos.coords.longitude;
+        // 假設中心座標 → 定點繪製即可（示意）
+        user.style.left = '150px';
+        user.style.top = '150px';
+        arrow.style.left = '155px';
+        arrow.style.top = '140px';
+      });
+
+      if (window.DeviceOrientationEvent) {
+        window.addEventListener('deviceorientation', e => {
+          const angle = e.alpha; // 使用 alpha 作為方向（順時針 0~360）
+          const arrow = document.getElementById('arrow');
+          if (angle != null) {
+            arrow.style.transform = `rotate(${angle}deg)`;
+          }
+        });
+      }
+    }
+
     const menuData = {
-      'motor1': ['小辣豆腐', '微糖茶'],
-      'motor2': ['中辣豆腐', '無糖茶'],
-      'motor3': ['重辣豆腐', '珍珠奶茶'],
-      'motor4': ['左旋電波', '水銀快遞']
+      火山豆腐: [
+        { label: '小辣', motor: 'motor1' },
+        { label: '中辣', motor: 'motor2' },
+        { label: '大辣', motor: 'motor3' }
+      ],
+      青檸茶: [
+        { label: '微糖', motor: 'motor1' },
+        { label: '半糖', motor: 'motor2' },
+        { label: '全糖', motor: 'motor4' }
+      ],
+      粒子豆腐: [
+        { label: '附湯', motor: 'motor3' },
+        { label: '不附湯', motor: 'motor2' }
+      ]
     };
 
-    const lockStatus = {}; // motor 鎖定狀態
+    const lockStatus = {};
     const menuDiv = document.getElementById('menu');
+    let selectedMotor = '';
 
-    Object.entries(menuData).forEach(([motor, items]) => {
+    async function syncLockStatus() {
+      try {
+        const res = await fetch('https://cwywwww.onrender.com/status');
+        const data = await res.json();
+        Object.assign(lockStatus, data);
+        updateLockUI();
+      } catch (e) {
+        console.error('同步狀態失敗', e);
+      }
+    }
+    setInterval(syncLockStatus, 1000);
+
+    Object.entries(menuData).forEach(([label, items]) => {
       const section = document.createElement('div');
       section.className = 'section';
-      section.dataset.motor = motor;
-      section.innerHTML = `<div class="label">${motor}</div>
+      section.innerHTML = `<div class="label">${label}</div>
         <div class="details">
           <div class="item-buttons">
-            ${items.map(i => `<button class="order-btn" data-motor="${motor}" onclick="prepareDelivery('${motor}')">${i}</button>`).join('')}
+            ${items.map(i => `<button class="order-btn" data-motor="${i.motor}" onclick="prepareDelivery('${i.motor}')">${i.label}</button>`).join('')}
           </div>
           <div class="locked-message" style="display:none;">該選項已售罄，請稍後補貨</div>
           <button class="back-button" onclick="goBack()">返回上一頁</button>
         </div>`;
-
       section.addEventListener('click', () => {
-        if (lockStatus[section.dataset.motor]) return;
+        if (items.every(i => lockStatus[i.motor])) return;
         document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
         section.classList.add('active');
       });
-
       menuDiv.appendChild(section);
     });
 
     function prepareDelivery(motorKey) {
       if (lockStatus[motorKey]) return;
-
+      selectedMotor = motorKey;
       lockStatus[motorKey] = true;
       updateLockUI();
+      goBack();
 
       setTimeout(() => {
         lockStatus[motorKey] = false;
         updateLockUI();
       }, 7000);
 
-      // 可加載地圖或動畫的部分...
+      document.getElementById('menu').style.display = 'none';
+      document.getElementById('map').style.display = 'block';
+      startGeoTracking();
+
+      const courier = document.getElementById('courier');
+      courier.style.left = '150px';
+      courier.style.top = '150px';
+
+      setTimeout(() => {
+        document.getElementById('map').style.display = 'none';
+        document.getElementById('delivered').style.display = 'block';
+      }, 10000);
+    }
+
+    async function confirmDelivery() {
+      document.getElementById('delivered').style.display = 'none';
+      showGrid(selectedMotor);
+      await fetch('https://cwywwww.onrender.com/send', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ data: selectedMotor })
+      });
+    }
+
+    function showGrid(motorKey) {
+      const table = document.getElementById('gridTable');
+      table.innerHTML = '';
+      const pos = parseInt(motorKey.replace('motor', ''));
+      const row = Math.floor((pos - 1) / 4) + 1;
+      const col = ((pos - 1) % 4) + 1;
+      for (let r = 1; r <= 4; r++) {
+        const tr = document.createElement('tr');
+        for (let c = 1; c <= 4; c++) {
+          const td = document.createElement('td');
+          if (r === row && c === col) td.className = 'highlight';
+          td.textContent = `${r}-${c}`;
+          tr.appendChild(td);
+        }
+        table.appendChild(tr);
+      }
+      document.getElementById('pickupText').textContent = `請查收您的餐點，取餐位置為：${row}-${col}`;
+      document.getElementById('grid').style.display = 'block';
+      setTimeout(() => {
+        document.getElementById('grid').style.display = 'none';
+        document.getElementById('thanks').style.display = 'block';
+      }, 7000);
     }
 
     function updateLockUI() {
-      document.querySelectorAll('.order-btn').forEach(btn => {
-        const motor = btn.dataset.motor;
-        if (lockStatus[motor]) {
-          btn.style.display = 'none';
-        } else {
-          btn.style.display = 'inline-block';
-        }
-      });
-
       document.querySelectorAll('.section').forEach(section => {
-        const motor = section.dataset.motor;
-        const isLocked = lockStatus[motor];
+        const buttons = section.querySelectorAll('.order-btn');
         const lockedMessage = section.querySelector('.locked-message');
         const backButton = section.querySelector('.back-button');
 
-        if (isLocked) {
+        let allLocked = true;
+        buttons.forEach(btn => {
+          const motorKey = btn.dataset.motor;
+          if (lockStatus[motorKey]) {
+            btn.style.display = 'none';
+          } else {
+            btn.style.display = 'inline-block';
+            allLocked = false;
+          }
+        });
+
+        if (allLocked) {
           section.classList.add('locked');
           if (lockedMessage) lockedMessage.style.display = 'block';
           if (backButton) backButton.style.display = 'inline-block';
@@ -170,27 +279,9 @@
       document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
     }
 
-    // 👉 方位感測器處理
-    if (window.DeviceOrientationEvent && typeof DeviceOrientationEvent.requestPermission === 'function') {
-      document.addEventListener('click', () => {
-        DeviceOrientationEvent.requestPermission()
-          .then(state => {
-            if (state === 'granted') {
-              window.addEventListener('deviceorientation', handleOrientation);
-            }
-          })
-          .catch(console.error);
-      });
-    } else {
-      window.addEventListener('deviceorientation', handleOrientation);
-    }
-
-    function handleOrientation(event) {
-      const alpha = event.alpha;
-      const arrow = document.getElementById('arrow');
-      if (arrow && typeof alpha === 'number') {
-        arrow.style.transform = `translate(-50%, -50%) rotate(${alpha}deg)`;
-      }
+    function goBackHome() {
+      document.getElementById('thanks').style.display = 'none';
+      document.getElementById('menu').style.display = 'block';
     }
   </script>
 </body>
